<resources>
    <string name="app_name">NotaryAgent</string>
    <string name="googlekey_other">AIzaSyCvCumi_CTE2_Qgwhw31ZRdm_kAv1T4VeU</string>
    <string name="googlekey">AIzaSyBsSViJ6n9cRn5KPeupG5LbRWeGnRyUygA</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="pleasewait">Please wait...</string>
    <string name="alreadylog">You are logged in from a different device. Would you like to log out of the other device?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="or">Or</string>
    <string name="login_sm">Login</string>
    <string name="phone">Phone Number</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="donthaveact">Don\'t have account? Signup Now</string>
    <string name="entermobile">Enter mobile number</string>
    <string name="enterpass">Enter Password</string>
    <string name="invalidcredential">Invalid Credentials</string>
    <string name="plsenfrst">Please enter your first name</string>
    <string name="plsenlst">Please enter your last name</string>
    <string name="plsenterphone">Please enter your phone number</string>
    <string name="plsemail">Please enter your email id</string>
    <string name="plsenpass">Enter Password</string>
    <string name="allowpermission">Allow Permission</string>
    <string name="nessper">This permission is necessary to use Notary</string>
    <string name="allow">Allow</string>
    <string name="forgotpassword">Forgot password</string>
    <string name="pleaseenteremailid">Please enter your email address</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="closeapp">Close App</string>
    <string name="signup">Signup</string>
    <string name="emailalreadyexist">An account with this email has already been registered</string>
    <string name="mobilealreadyexist">An account with this phone number has already been registered</string>
    <string name="wevarify">We will verify your mobile number</string>
    <string name="wantcont">Do you want to continue?</string>
    <string name="resndotp">Resend otp</string>
    <string name="plsenterotp">Enter otp number</string>
    <string name="enterotp">Enter Otp</string>
    <string name="otpnotmatch">Otp does not match</string>
    <string name="sign_sm">Signup</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="appupdateneed">New version available. Please update before continuing</string>
    <string name="remindlater">Remind me Later</string>
    <string name="ok">Ok</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="accept_sm">Accept</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="seldatetime">Select date and time</string>
    <string name="home">Home</string>
    <string name="earning">Earning</string>
    <string name="profile">Profile</string>
    <string name="streetpick">Street Pickup</string>
    <string name="mysigning">My Signings</string>
    <string name="schedulesigning">Schedule a Signing</string>
    <string name="inviteearn"><![CDATA[Invite & Earn]]></string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="emergencycon">Emergency Contact</string>
    <string name="pressagain">Press again</string>
    <string name="myprofile">My Profile</string>
    <string name="aboutus">About Us</string>
    <string name="moreinformation">More Information</string>
    <string name="allrides">All</string>
    <string name="upcoming">On Signing</string>
    <string name="completed">Completed</string>
    <string name="noridecomp">No signing completed</string>
    <string name="nobookedride">No booked signing</string>
    <string name="norides">No Signing</string>
    <string name="currentloc">Current Location</string>
    <string name="tripamount">Signing Amount</string>
    <string name="today">Today</string>
    <string name="thisweek">This Week</string>
    <string name="nodatafound">No data found</string>
    <string name="withdraw">Withdraw</string>
    <string name="invitefriend">Invite Friend</string>
    <string name="update">Update</string>
    <string name="agentdetail">Agent Detail</string>
    <string name="referalamount">Referal Amount</string>
    <string name="paymentrepen">Payment request in pending $0.00</string>
    <string name="startsigning">Start Signing</string>
    <string name="agent">AGENTS</string>
    <string name="ongoing">On Going</string>
    <string name="pastsigning">Past Signings</string>
    <string name="triphistory">Signing History</string>
    <string name="lasttrips">Last 3 Trips</string>
    <string name="plschkemaillink">Please check reset password mail is send to your email id</string>
    <string name="emailnotexist">This Email id is not exist</string>
    <string name="enterfirstname">Please enter First name</string>
    <string name="enterlastname">Please enter Last name</string>
    <string name="emteremail">Please enter email id</string>
    <string name="createaccoub">Create Account</string>
    <string name="driverinfo">Agent Info</string>
    <string name="username">Name</string>
    <string name="selectlang">Select Language</string>
    <string name="driverlicens">Agent License</string>
    <string name="carimage">Car Image</string>
    <string name="license">Car License</string>
    <string name="carmodel">Car Model</string>
    <string name="yearmanu">Car Year</string>
    <string name="yellowcol">Car Color</string>
    <string name="carregis">Car Registration Number</string>
    <string name="insurance">Insurance</string>
    <string name="register">Register</string>
    <string name="bookingrequest">Booking request</string>
    <string name="bookingrequestcanceledbyuser">Booking request has been canceled by user.</string>
    <string name="newmessagecome">New message from user</string>
    <string name="selectcarmodel">Select car make and model</string>
    <string name="selmanyyear">Maufacture Year</string>
    <string name="selectcarcol">Select Car Color</string>
    <string name="plsentpass">Please Enter Password</string>
    <string name="plsmobilestr">Please enter mobile number</string>
    <string name="plsentusername">Please Enter Username</string>
    <string name="plsselyear">Please select manufacture year</string>
    <string name="entercarmodel">Please enter car model name</string>
    <string name="plsenterregi">Please enter licence plate number</string>
    <string name="pleasuplodains">Please upload insurance image</string>
    <string name="plsupldri">Please upload driver license image</string>
    <string name="selservicetype">Select your car type</string>
    <string name="plsupyourprofile">Please upload your profile image</string>
    <string name="profileupdsucc">your profile is updated successfully.</string>
    <string name="notarymobilitypartner">Notary Mobility Partner Application</string>
    <string name="getmoresigning">Get more Signings\nquickly</string>
    <string name="nodryruns">No dry runs</string>
    <string name="freeautomation">Free automation\nsystem</string>
    <string name="parnotry">Partner with Notary Mobility by filling out the information below one of our team member will contact you.</string>
    <string name="doyouwork">Do you already work with Notary Mobility</string>
    <string name="noiamfirst">No , i am connecting for the first time</string>
    <string name="yesiampartner">Yes , i am a direct partner</string>
    <string name="yesconagg">Yes , i am connected through aggregator</string>
    <string name="currentlymobilenotary">Curently Mobile Notary</string>
    <string name="ifapproved">If approved do you plan to start immidiatley</string>
    <string name="numberofyear">Number of years</string>
    <string name="wennedyourapp">We need your application to be reviewed by electronic means only communications regarding your appication , including notice of our decision.Once you are accepted you will receive a welcome letter including the hard copy packat which needs to be filled out and send in by mail.</string>
    <string name="termstext">I have reviewed and agree to the Terms of agreement  to the term of the Electronic Communication Discloser.I confirmed that i have an active Notary license for my state and ability to access , view and print Pdf files.</string>
    <string name="termsfirst">I have reviewed and agree to the</string>
    <string name="termssec">Terms of agreement</string>
    <string name="termsthird">to the term of the Electronic Communication Discloser.I confirmed that i have an active Notary license for my state and ability to access , view and print Pdf files.</string>
    <string name="companyname">Company Name</string>
    <string name="sendapp">Send Application</string>
    <string name="plsentercomname">Please enter your company name</string>
    <string name="statelicenced">Please enter state license</string>
    <string name="selectstate">Select state</string>
    <string name="selectcity">Select City</string>
    <string name="statelicensed">State Licensed</string>
    <string name="enternumyears">Enter number of years</string>
    <string name="plsaccepterms">For continue you need to accept our Terms of Conditions.</string>
    <string name="paymentmethod">Payment Method</string>
    <string name="agents">Agent</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="location">Location</string>
    <string name="canceluser">This signing request has been canceled by the user</string>
    <string name="alreadyaccept">This signing request has been accepted by other Agent</string>
    <string name="client">Client</string>
    <string name="signingrequest">Signing Request</string>
    <string name="friendearn">Friend joins ,friend earns $100 Friend\nSigning you earn $100</string>
    <string name="sharerefer">Share your referral code</string>
    <string name="nosigningreqa">No Signing Request Available</string>
    <string name="youraccountcreate">Thank you for your interest to become a Notary Mobility agent you will be contacted soon.</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="contactus">Contact Us</string>
    <string name="subject">Subject</string>
    <string name="termscondition">Terms and Conditions</string>
    <string name="website">http://www.notarymobility.com</string>
    <string name="addowner">Imzah Corporation 10319 Westlake Drive . Suite # 777 Bethesda, MD 20817</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zip Code</string>
    <string name="message">Message</string>
    <string name="name">Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="settings">Setting</string>
    <string name="changepass">Change Password</string>
    <string name="help">Help</string>
    <string name="accountholdername">Account Holder Name</string>
    <string name="accountholderaddress">Account Holder Address</string>
    <string name="accountnumber">Account Number</string>
    <string name="bankname">Bank Name</string>
    <string name="branchname">Branch Name</string>
    <string name="branchaddress">Branch Address</string>
    <string name="ifsccode">IFSC Code</string>
    <string name="routingnumber">Routing Number</string>
    <string name="bankaccount">Bank Account</string>
    <string name="areusure">Are you sure?</string>
    <string name="tocancel1">Cancel this request</string>
    <string name="tripscheduled">Trip Scheduled</string>
</resources>