<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/toobarcolor"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo" />
            <TextView
                android:visibility="gone"
                android:id="@+id/heading_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/areusure"
                android:textColor="@color/darktextcol"
                android:textSize="@dimen/medium" />

            <TextView
                android:visibility="visible"
                android:id="@+id/message_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/tocancel1"
                android:textColor="@color/black"
                android:textSize="@dimen/medium" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/yes_tv"
                    style="@style/tv_title"
                    android:layout_weight="1"
                    android:background="@color/darktextcol"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:textColor="@color/white" />

                <TextView
                    android:visibility="visible"
                    style="@style/tv_title"
                    android:id="@+id/no_tv"
                    android:layout_weight="1"
                    android:background="@color/darkgrey"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>